# email-parser

./: .gitignore  .pre-commit-config.yaml  CLI_USAGE.md  DATA_INGESTION_README.md  Makefile  QUICK_START.md  README.md  STREAMLIT_FIXED.md  STREAMLIT_UI_GUIDE.md  UI_COMPARISON.md  UI_LAUNCH_GUIDE.md  analyze_bupa_files.py  analyze_files.py  cli.py  config.yaml  config_manager.py  data_ingestion_cli.py  data_ingestion_cli_v2.py  data_ingestion_mapper_v2.py  demo.py  demo_mcp_functionality.py  email_cli.py  parse_emails.py  pyproject.toml  results.json  setup.sh  simple_install.sh  start_streamlit_ui.py  start_web_ui.py  test_auto_save.py  test_mcp.py
config/: file_mappings.json  templates_config.json
docs/: CONFIG_SYSTEM_README.md  OLLAMA_AI_INTEGRATION.md  OUTPUT_GUIDE.md  PROJECT_STRUCTURE.md  WEB_UI_GUIDE.md
examples/: client_integration.py
examples/Batchload files/: Group 1.xls  Group 2.csv  Group 3.xls  Group 4.xls  Group 5.csv  Group 6.xls  Group 7.xls  Group 8.xlsx  Group 9.xls
examples/Change files/: AON.xls  Benifex Dental.csv  Bupa Dental Changes File April 25.xlsx  Darwin IDT 2604799562  Dental-JLC.xls  Darwin IDT 2607094844 PMI-JLC.xls
output/: README.md
reports/: AON_template_2_20250801_010943_report.json  AON_template_2_20250801_010943_report_summary.txt  AON_template_2_20250801_011024_report.json  AON_template_2_20250801_011024_report_summary.txt  Benifex Dental_template_2_20250801_011024_report.json  Benifex Dental_template_2_20250801_011024_report_summary.txt  Bupa Dental Changes File April 25_template_2_20250801_011024_report.json  Bupa Dental Changes File April 25_template_2_20250801_011024_report_summary.txt  Darwin IDT 2604799562  Dental-JLC_template_2_20250801_011024_report.json  Darwin IDT 2604799562  Dental-JLC_template_2_20250801_011024_report_summary.txt  Darwin IDT 2607094844 PMI-JLC_template_2_20250801_011024_report.json  Darwin IDT 2607094844 PMI-JLC_template_2_20250801_011024_report_summary.txt  Group 1_template_1_20250801_011024_report.json  Group 1_template_1_20250801_011024_report_summary.txt  Group 2_template_1_20250801_011024_report.json  Group 2_template_1_20250801_011024_report_summary.txt  Group 3_template_1_20250801_011024_report.json  Group 3_template_1_20250801_011024_report_summary.txt  Group 4_template_1_20250801_011024_report.json  Group 4_template_1_20250801_011024_report_summary.txt  Group 5_template_1_20250801_011024_report.json  Group 5_template_1_20250801_011024_report_summary.txt  Group 6_template_1_20250801_011024_report.json  Group 6_template_1_20250801_011024_report_summary.txt  Group 7_template_1_20250801_011024_report.json  Group 7_template_1_20250801_011024_report_summary.txt  Group 8_template_1_20250801_011024_report.json  Group 8_template_1_20250801_011024_report_summary.txt  Group 9_template_1_20250801_011024_report.json  Group 9_template_1_20250801_011024_report_summary.txt  UK Membership Template - BUPA update June 2025_MEDICAL_template_2_20250801_011024_report.json  UK Membership Template - BUPA update June 2025_MEDICAL_template_2_20250801_011024_report_summary.txt
src/: streamlit_ui.py  web_ui.py
tests/: test_basic.py
(+13 files in other folders)
